--- a/ControleFinanceiro.dproj
+++ b/ControleFinanceiro.dproj
@@ -84,6 +84,8 @@
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <VerInfo_Locale>1033</VerInfo_Locale>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -98,7 +100,23 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="UnitPrincipal.pas">
+        <DCCReference Include="src\models\Categoria.pas"/>
+        <DCCReference Include="src\controllers\CategoriaController.pas"/>
+        <DCCReference Include="src\views\Categorias\UnitFormCategorias.pas">
+            <Form>FormCategorias</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="src\datamodules\UnitDataModule.pas">
+            <Form>DataModuleConexao</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TDataModule</DesignClass>
+        </DCCReference>
+        <DCCReference Include="src\views\Main\UnitFormMain.pas">
+            <Form>FormMain</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="src\utils\Utils.pas"/>
+        <DCCReference Include="src\views\Login\UnitFormLogin.pas">
             <Form>Form1</Form>
             <FormType>dfm</FormType>
         </DCCReference>
@@ -122,6 +140,10 @@
                 <Source>
                     <Source Name="MainSource">ControleFinanceiro.dpr</Source>
                 </Source>
+                <Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k280.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp280.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+                </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="4">
                 <DeployFile LocalName="Win32\Debug\ControleFinanceiro.exe" Configuration="Debug" Class="ProjectOutput">
