--- a/ControleFinanceiro.dproj
+++ b/ControleFinanceiro.dproj
@@ -117,7 +117,7 @@
         </DCCReference>
         <DCCReference Include="src\utils\Utils.pas"/>
         <DCCReference Include="src\views\Login\UnitFormLogin.pas">
-            <Form>Form1</Form>
+            <Form>FormLogin</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Base">
